# telem-in-a-box

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  mac_build.sh
.github/workflows/: cmake_build.yml  cmake_debug.yml  cmake_release.yml
src/: CMakeLists.txt  telem.cpp
